# fitsdk

./: CMakeLists.txt
cmake/: fitsdkConfig.cmake
fitsdk/: CMakeLists.txt
